--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
 
-    <title>Boutique Hotel</title>
+    <title>Admin Panel of Boutique Hotel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
